# emulsion

./: .gitignore  Bindings.md  CHANGELOG.md  Cargo.toml  CustomCommands.md  LICENSE.txt  README.md  build.rs  cfg.toml  usage.txt  vcpkg.json
.github/workflows/: release-packages.yml  test.yml
build_script/: build.rs  cargo.rs
distribution/macos/: IMPORTANT.txt  create_dmg.sh
distribution/macos/Example Info/: Info.plist
distribution/osx/app/Contents/Resources/: Emulsion.icns
distribution/osx/app/Emulsion.app/Contents/: Info.plist
distribution/windows/: .gitignore  FileAssociation.nsh  LICENSE.txt  Readme.txt  emulsion.nsi  make-test-installer.bat  update_files.bat
distribution/windows/prerequisites/: README.txt
nix-example/: .gitignore  default.nix  result
nix-example/emulsion/: default.nix
resource_dev/: Emulsion Usage.odt  copy.xcf  emulsion.icns  new-version-available.xcf  ui-elements.blend  ui-elements.blend1  use-left-to-pan.xcf  visit-site.xcf
resource_dev/Usage Panel/: Emulsion Usage.odt  HOW TO EDIT.txt
src/: bottom_bar.rs  bottom_panel.rs  clipboard_handler.rs  cmd_line.rs  configuration.rs  handle_panic.rs  help_screen.rs  image_cache.rs  input_handling.rs  main.rs  parallel_action.rs  picture_controller.rs  picture_panel.rs  picture_widget.rs  playback_manager.rs  shaders.rs  util.rs  utils.rs  version.rs  window.rs
src/image_cache/: directory.rs  image_loader.rs  mod.rs  pending_requests.rs  texture_loader.rs
src/shaders/: color_shadow_f_110.glsl  color_shadow_f_140.glsl  fragment_110.glsl  fragment_140.frag  fragment_140.glsl  texture_shadow_f_110.glsl  ui_fragment_110.glsl  ui_fragment_140.glsl  vertex_110.vert  vertex_140.glsl
src/ui/: button.rs  label.rs  mod.rs  slider.rs  toggle.rs
src/widgets/: bottom_bar.rs  copy_notification.rs  help_screen.rs  mod.rs  picture_widget.rs
subcrates/gelatin/: Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
subcrates/gelatin/examples/: hello.rs
subcrates/gelatin/src/: application.rs  button.rs  event_loop.rs  horizontal_layout_container.rs  label.rs  lib.rs  line_layout_container.rs  misc.rs  picture.rs  shaders.rs  slider.rs  window.rs
subcrates/gelatin/src/shaders/: color_f_110.glsl  color_f_140.glsl  color_shadow_f_110.glsl  color_shadow_f_140.glsl  texture_shadow_f_110.glsl  texture_shadow_f_140.glsl
