[package]
name = "emulsion"
version = "8.0.0"
description = "A fast and minimalistic image viewer"
repository = "https://github.com/ArturKovacs/emulsion"
authors = ["Artur Barnabas <kovacs.artur.barnabas@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"
build = "build.rs"

[workspace]
members = [
    "subcrates/gelatin",
]

[profile.dev.package."*"]
opt-level = 1
[profile.dev.build-override]
opt-level = 1
[profile.release]
lto = true

[features]
default = []
networking = ["ureq"]
avif = ["libavif-image"]

[package.metadata.bundle]
name = "Emulsion"
identifier = "io.github.arturkovacs.emulsion"
icon = ["resource_dev/emulsion.png"]
resources = ["LICENSE.txt"]
short_description = "A lightweight and minimalistic image viewer"
copyright = "Copyright (c) 2020 The Emulsion Contributors"
linux_exec_args = "%f"
linux_mime_types = [
    "image/jpeg",
	"image/jpg",
	"image/pjpeg",
	"image/png",
	"image/apng",
	"image/gif",
	"image/webp",
	"image/tiff",
	"image/bmp",
	"image/avif",
	"image/svg+xml",
	"image/svg",
	"image/x-png",
	"image/x-tga",
	"image/x-targa",
	"image/x-bmp",
	"image/x-icon",
	"image/vnd.radiance",
	"image/x‑portable‑bitmap",
	"image/x‑portable‑graymap",
	"image/x‑portable‑pixmap",
	"image/x‑portable‑anymap"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
gelatin = { path = "./subcrates/gelatin", version = "0.6" }
ureq = { version = "1", features = ["json"], optional = true }
lazy_static = "1.4.0"
directories-next = "2.0"
open = "1.4.0"
sys-info = "0.7"
error-chain = "0.12"
backtrace = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rand = "0.7"
lexical-sort = "0.3"
trash = "1.2"
clap = { version = "2.33", default-features = false }
kamadak-exif = "0.5.1"
arboard = "1.1"
resvg = "0.13.0"
usvg = "0.13.0"
tiny-skia = "0.3.0"
png = "0.16.7"

[dependencies.libavif-image]
version = "0.5"
default-features = false
features = ["codec-dav1d"]
optional = true
