[package]
name = "gelatin"
version = "0.10.0"
description = "A basic UI framework"
repository = "https://github.com/ArturKovacs/emulsion"
authors = ["Artur Barnabas <kovacs.artur.barnabas@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
avif = ["image/avif-decoder"]
benchmark = []

[dependencies]
cgmath = "0.18.0"
derive_builder = "0.9.0"
image = "0.24.9"
glium = "0.29.0"
winit = "0.24.0"
