[package]
name = "gelatin"
version = "0.11.0"
description = "A basic UI framework"
repository = "https://github.com/ArturKovacs/emulsion"
authors = ["Artur Barnabas <kovacs.artur.barnabas@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
avif = ["image/avif-native"]
benchmark = []

[dependencies]
cgmath = "0.18.0"
derive_builder = "0.9.0"
image = "0.25.1"
glium = "0.34.0"
winit = { version = "0.29.2", features = ["rwh_05"] }
glutin-winit = "*"
raw-window-handle = "0.5.2"
log = "0.4"
